[package]
name = "keebifa-macros"
version = "0.1.0"
authors = ["Aoife Bradley <me@ifa.codes>"]
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0"
quote = "1.0"
itertools = "0.10.2"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "207f5a1ff8723bf1eed0d03f9825730963b8d7df"}
